Created mobile and tablet footer, hide back to top buttton too.

--- a/website/index.html
+++ b/website/index.html
@@ -57,7 +57,7 @@
             </section>
          </div>
          <!-- Right content -->
-         <div>
+         <div class="statement-top">
             <section class="flex-item" >
                <header>
                   <h3 class="h3body">Statement of Signifigance</h3>
@@ -74,7 +74,6 @@
          </div>
       </div>
       <!-- End of into content -->
-      <!-- TEST -->
         <!-- Second parallax scrolling image -->
         <div class="parallax-image2">
          <div id="wrapper">
