Fixing middle content.

--- a/website/index.html
+++ b/website/index.html
@@ -79,6 +79,7 @@
             <div id="wrapper"></div>
          </div>
          <!-- Middle content -->
+          <!-- test start this is first block --> 
          <div class="flex-item">
             <!-- Right top -->
             <div>
@@ -109,7 +110,7 @@
                </div>
             </div>
          </div>
-         <div class="flex-item">
+         <div class="flex-item2">
             <!-- Left bottom content -->
             <div>
                <div class="block">
