--- a/website/index.html
+++ b/website/index.html
@@ -79,7 +79,7 @@
             <div id="wrapper"></div>
          </div>
          <!-- Middle content -->
-          <!-- test start this is first block --> 
+         <!-- test start this is first block --> 
          <div class="flex-item">
             <!-- Right top -->
             <div>
@@ -141,6 +141,67 @@
             </div>
          </div>
          <!-- End of middle content -->
+         <!-- test -->
+         <!-- Contact -->
+         <div class="flex-container2">
+            <section id="form">
+               <div class="contact-wrap">
+                    
+                        <header>
+                           <h2 class="contact-heading">Contact Us</h2>
+                        </header>
+                        <!-- On click the submit button will take users to the top of the page -->
+                        <form action="index.html" class="tm-contact-form" >
+                           <div class="form-spacing">
+                              <input
+                                 name="contact_name"
+                                 class="form-area"
+                                 placeholder="Name"
+                                 required
+                                 />
+                           </div>
+                           <div class="form-spacing">
+                              <input
+                                 name="contact_email"
+                                 class="form-area"
+                                 placeholder="Email"
+                                 required
+                                 />
+                           </div>
+                           <div class="form-spacing">
+                              <textarea
+                                 name="contact_message"
+                                 class="form-area"
+                                 placeholder="Leave a message"
+                                 required
+                                 ></textarea>
+                           </div>
+                           <div class="tm-text-right">
+                              <button type="submit" class="submit-button tm-btn">
+                              Submit
+                              </button>
+                           </div>
+                        </form>
+                    
+               </div>
+            </section>
+            <div>
+               <section>
+                  <header>
+                     <h3 class="h3body">Statement of Signifigance</h3>
+                  </header>
+                  <article>
+                     <h4 class="headings">Heritage</h4>
+                     <p class="content">The Tocumwal Housing Precinct in O'Connor is significant as an outstanding example of low cost pre-fabricated housing, which was constructed in Canberra after World War 2.
+                     </p>
+                     <p class="content">  As part of the Government's solution to the critical housing shortage being experienced in Canberra at the time, many of the houses originally constructed at Tocumwal
+                        in NSW for the US Army Air Corps were re-erected in the ACT. 
+                     </p>
+                  </article>
+               </section>
+            </div>
+         </div>
+         <!-- test end --> 
       </main>
       <footer>
          <!-- Anchor tag used as the back to top button -->
