--- a/website/index.html
+++ b/website/index.html
@@ -146,10 +146,10 @@
          <div class="flex-container2">
             <section id="form">
                <div class="contact-wrap">
-                    
-                        <header>
-                           <h2 class="contact-heading">Contact Us</h2>
-                        </header>
+                   <header>
+                        <h2 class="contact-heading">Contact Us</h2>
+                    </header>
+                    <article>
                         <!-- On click the submit button will take users to the top of the page -->
                         <form action="index.html" class="tm-contact-form" >
                            <div class="form-spacing">
@@ -182,7 +182,7 @@
                               </button>
                            </div>
                         </form>
-                    
+                    </article>
                </div>
             </section>
             <div>
