Fixing larger resolution flex boxes

--- a/website/index.html
+++ b/website/index.html
@@ -140,10 +140,9 @@
                </div>
             </div>
          </div>
-         <!-- End of middle content -->
-         <!-- test -->
-         <!-- Contact -->
-         <div class="flex-container2">
+          <!-- test -->
+          <div class="flex-item2">
+            <!-- Left bottom content -->
             <section id="form">
                <div class="contact-wrap">
                    <header>
@@ -185,22 +184,24 @@
                     </article>
                </div>
             </section>
+            <!-- Right bottom content -->
             <div>
-               <section>
-                  <header>
-                     <h3 class="h3body">Statement of Signifigance</h3>
-                  </header>
-                  <article>
-                     <h4 class="headings">Heritage</h4>
+               <div class="block">
+                  <div class="block-image">
+                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
+                  </div>
+                  <div class="block-content">
+                      <h3 class="h3body">Statement of Signifigance</h3>
                      <p class="content">The Tocumwal Housing Precinct in O'Connor is significant as an outstanding example of low cost pre-fabricated housing, which was constructed in Canberra after World War 2.
                      </p>
-                     <p class="content">  As part of the Government's solution to the critical housing shortage being experienced in Canberra at the time, many of the houses originally constructed at Tocumwal
-                        in NSW for the US Army Air Corps were re-erected in the ACT. 
-                     </p>
-                  </article>
-               </section>
+                  </div>
+               </div>
             </div>
          </div>
+         <!-- End of middle content -->
+         <!-- test -->
+         <!-- Contact -->
+       
          <!-- test end --> 
       </main>
       <footer>
