--- a/website/index.html
+++ b/website/index.html
@@ -146,7 +146,7 @@
             <section id="form">
                <div class="contact-wrap">
                    <header>
-                        <h2 class="contact-heading">Contact Us</h2>
+                        <h2 class="contact-heading">Get in touch</h2>
                     </header>
                     <article>
                         <!-- On click the submit button will take users to the top of the page -->
