Changes to parallax images.

--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
       <main>
          <!-- Hero image -->
          <div class="hero-image">
-            <div id="wrapper">
+            <div id="welcome-wrapper">
                <h1 class="parallax-header">Welcome</h1>
             </div>
          </div>
@@ -76,7 +76,9 @@
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
          <div class="parallax-image2">
-            <div id="wrapper"></div>
+             <div id="stories-wrapper" class="stories-background">
+               <h1 class="parallax-header">Welcome</h1>
+            </div>
          </div>
          <!-- Middle content -->
          <!-- test start this is first block --> 
