Making the form better.

--- a/website/index.html
+++ b/website/index.html
@@ -77,7 +77,7 @@
          <!-- Second parallax scrolling image -->
          <div class="parallax-image2">
              <div id="stories-wrapper" class="stories-background">
-               <h1 class="parallax-header">Welcome</h1>
+               <h1 class="parallax-header">Tocumwal Stories</h1>
             </div>
          </div>
          <!-- Middle content -->
@@ -143,7 +143,7 @@
             </div>
          </div>
           <!-- test -->
-          <div class="flex-item2">
+          <div class="contact-background">
             <!-- Left bottom content -->
             <section id="form">
                <div class="contact-wrap">
@@ -157,7 +157,7 @@
                               <input
                                  name="contact_name"
                                  class="form-area"
-                                 placeholder="Name"
+                                 placeholder="Name*"
                                  required
                                  />
                            </div>
@@ -165,15 +165,23 @@
                               <input
                                  name="contact_email"
                                  class="form-area"
-                                 placeholder="Email"
+                                 placeholder="Email*"
                                  required
+                                 />
+                           </div>
+                            <div class="form-spacing">
+                              <input
+                                 name="contact_phone"
+                                 class="form-area"
+                                 placeholder="Phone Number"
+                                 optional
                                  />
                            </div>
                            <div class="form-spacing">
                               <textarea
                                  name="contact_message"
                                  class="form-area"
-                                 placeholder="Leave a message"
+                                 placeholder="Leave a message*"
                                  required
                                  ></textarea>
                            </div>
@@ -186,20 +194,10 @@
                     </article>
                </div>
             </section>
+        </div>
             <!-- Right bottom content -->
-            <div>
-               <div class="block">
-                  <div class="block-image">
-                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
-                  </div>
-                  <div class="block-content">
-                      <h3 class="h3body">Statement of Signifigance</h3>
-                     <p class="content">The Tocumwal Housing Precinct in O'Connor is significant as an outstanding example of low cost pre-fabricated housing, which was constructed in Canberra after World War 2.
-                     </p>
-                  </div>
-               </div>
-            </div>
-         </div>
+       
+       
          <!-- End of middle content -->
          <!-- test -->
          <!-- Contact -->
