Adding better colours.

--- a/website/index.html
+++ b/website/index.html
@@ -76,7 +76,7 @@
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
          <div class="parallax-image2">
-             <div id="stories-wrapper" class="stories-background">
+            <div id="stories-wrapper" class="stories-background">
                <h1 class="parallax-header">Tocumwal Stories</h1>
             </div>
          </div>
@@ -141,69 +141,69 @@
                </div>
             </div>
          </div>
-          <!-- Contact From -->
-          <div class="contact-background">
-              <header>
-                        <h2 class="contact-heading">Tell us your questions!</h2>
-                    </header>
+         <!-- Contact From -->
+         <div class="contact-background">
+            <header>
+               <h2 class="contact-heading">Tell us your questions!</h2>
+            </header>
             <section id="form">
                <div class="contact-wrap">
-                   
-                    <article>
-                        <!-- On click, the submit button will take users to the top of the page -->
-                        <form action="index.html" class="tm-contact-form" >
-                           <div class="form-spacing">
-                              <input
-                                 name="contact_name"
-                                 class="form-area"
-                                 placeholder="Name*"
-                                 required
-                                 />
-                           </div>
-                           <div class="form-spacing">
-                              <input
-                                 name="contact_email"
-                                 class="form-area"
-                                 placeholder="Email*"
-                                 required
-                                 />
-                           </div>
-                            <div class="form-spacing">
-                              <input
-                                 name="contact_phone"
-                                 class="form-area"
-                                 placeholder="Phone Number"
-                                 optional
-                                 />
-                           </div>
-                           <div class="form-spacing">
-                              <textarea
-                                 name="contact_questions"
-                                 class="form-area"
-                                 placeholder="Your questions*"
-                                 required
-                                 ></textarea>
-                           </div>
-                           <div class="tm-text-right">
-                              <button type="submit" class="submit-button tm-btn">
-                              Submit
-                              </button>
-                           </div>
-                        </form>
-                    </article>
+                  <article>
+                     <!-- On click, the submit button will take users to the top of the page -->
+                     <form>
+                        <div class="form-spacing">
+                           <input
+                              name="contact_name"
+                              class="form-area"
+                              placeholder="Name*"
+                              required
+                              />
+                        </div>
+                        <div class="form-spacing">
+                           <input
+                              name="contact_email"
+                              class="form-area"
+                              placeholder="Email*"
+                              required
+                              />
+                        </div>
+                        <div class="form-spacing">
+                           <input
+                              name="contact_phone"
+                              class="form-area"
+                              placeholder="Phone Number"
+                              optional
+                              />
+                        </div>
+                        <div class="form-spacing">
+                           <textarea
+                              name="contact_questions"
+                              class="form-area"
+                              placeholder="Your questions*"
+                              required
+                              ></textarea>
+                        </div>
+                        <div>
+                           <button class="submit-button">
+                           Submit
+                           </button>
+                        </div>
+                     </form>
+                  </article>
                </div>
             </section>
-        </div>
-
+         </div>
       </main>
-      <footer>
-         <!-- Anchor tag used as the back to top button -->
-         <div> <a href="#Home" class="topbtn">Back to top</a> </div>
-         <p> &#169; 0074 Tocumwal Houses Archive </p>
-         <p>Contact Us:<a class="footerclicked" href="#">Tocumwal Houses</a></p>
-         <p>Email:<a class="footerclicked" href="#">Library.customerinfo@act.gov.au</a></p>
-         <p><a class="footerclicked" href="#">About Us</a></p>
-         <p><a class="footerclicked" href="#">FAQ</a></p>
-      </footer>
+        <div class="footer-background">
+          <footer>
+             <!-- Anchor tag used as the back to top button -->
+             <div> <a href="#Home" class="topbtn">Back to top</a> </div>
+             <p> &#169; 0074 Tocumwal Houses Archive </p>
+             <p>Contact Us:<a class="footerclicked" href="#">Tocumwal Houses</a></p>
+             <p>Email:<a class="footerclicked" href="#">Library.customerinfo@act.gov.au</a></p>
+             <p><a class="footerclicked" href="#">About Us</a></p>
+             <p><a class="footerclicked" href="#">FAQ</a></p>
+          </footer>
+        </div>
    </body>
 </html>
