--- a/website/index.html
+++ b/website/index.html
@@ -89,7 +89,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3body">Tocumwal Origins</h3>
+                     <h3 class="h3body h3-center">Tocumwal Origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
@@ -103,7 +103,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3body">Tocumwal Origins</h3>
+                     <h3 class="h3body h3-center">Tocumwal Origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
@@ -119,7 +119,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3body">Tocumwal Origins</h3>
+                     <h3 class="h3body h3-center">Tocumwal Origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
@@ -133,7 +133,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3body">Tocumwal Origins</h3>
+                     <h3 class="h3body h3-center">Tocumwal Origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
