Changing to a more meaningfull class name.

--- a/website/index.html
+++ b/website/index.html
@@ -89,7 +89,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class=" h3-center">Tocumwal origins</h3>
+                     <h3 class="story-heading">Tocumwal origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
@@ -103,7 +103,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class=" h3-center">Tocumwal to Canberra</h3>
+                     <h3 class="story-heading">Tocumwal to Canberra</h3>
                      <p class="content2">
                         I remember seeing houses in sections going along the highway on big trucks. The Murray Valley Highway was really narrow and they seemed to take up all of the road. I knew they came from Tocumwal but I didn't know where they were going. Sylvia Glenndenning (contributed 1996)
                      </p>
@@ -119,7 +119,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3-center">Sylvia Hollier</h3>
+                     <h3 class="story-heading">Sylvia Hollier</h3>
                      <p class="content2">
                         My family was aware of Tocumwal and its houses long before they became a feature of the streets of O'Connor. My father, Hartley Hollier, was a serving member of the RAAF from 1936-46 and was actually stationed at Tocumwal. - (contributed 1996)
                      </p>
@@ -133,7 +133,7 @@
                      <img type="image/png" href="assets/images/icon.png" class="middle-image">
                   </div>
                   <div class="block-content">
-                     <h3 class="h3-center">Tocumwal Origins</h3>
+                     <h3 class="story-heading">Tocumwal Origins</h3>
                      <p class="content2">
                         After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
                      </p>
