Adding actual content to the flex boxes.

--- a/website/index.html
+++ b/website/index.html
@@ -86,12 +86,12 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
+                     <img class="middle-image1">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Tocumwal origins</h3>
+                     <h3 class="story-heading">Dr Darryl McIntyre and Noel Flanagan</h3>
                      <p class="content2">
-                        After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
+                        After the bombing of Darwin, the United States of America and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance. (contributed 2000)
                      </p>
                   </div>
                </div>
@@ -100,12 +100,12 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
+                     <img class="middle-image2">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Tocumwal to Canberra</h3>
+                     <h3 class="story-heading">Sylvia Glenndenning</h3>
                      <p class="content2">
-                        I remember seeing houses in sections going along the highway on big trucks. The Murray Valley Highway was really narrow and they seemed to take up all of the road. I knew they came from Tocumwal but I didn't know where they were going. Sylvia Glenndenning (contributed 1996)
+                        I remember seeing houses in sections going along the highway on big trucks. The Murray Valley Highway was really narrow and they seemed to take up all of the road. I knew they came from Tocumwal but I didn't know where they were going.  (contributed 1996)
                      </p>
                   </div>
                </div>
@@ -116,12 +116,12 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
+                     <img class="middle-image3">
                   </div>
                   <div class="block-content">
                      <h3 class="story-heading">Sylvia Hollier</h3>
                      <p class="content2">
-                        My family was aware of Tocumwal and its houses long before they became a feature of the streets of O'Connor. My father, Hartley Hollier, was a serving member of the RAAF from 1936-46 and was actually stationed at Tocumwal. - (contributed 1996)
+                        My family was aware of Tocumwal and its houses long before they became a feature of the streets of O'Connor. My father, Hartley Hollier, was a serving member of the RAAF from 1936-46 and was actually stationed at Tocumwal. (contributed 1996)
                      </p>
                   </div>
                </div>
@@ -130,12 +130,12 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img type="image/png" href="assets/images/icon.png" class="middle-image">
+                     <img class="middle-image4">
                   </div>
                   <div class="block-content">
-                     <h3 class="story-heading">Tocumwal Origins</h3>
+                     <h3 class="story-heading">Andrew Morris</h3>
                      <p class="content2">
-                        After the bombing of Darwin, the United States and Australia made joint plans for Australian inland defence. The Tocumwal airfield was the largest and first of several large airfields planned for construction in relation to the the line of possible Japanese advance.
+                        We arrived in Australia in 1966 and bought this house in Quinn Street, O'Connor. The house, a Tocumwal type, had a huge back yard. There were all types of fruit trees, pencil pines and nut trees growing. But it was the large block off the beaten track that attracted me. (contriubted 1996)
                      </p>
                   </div>
                </div>
