--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
       </header>
       <main>
          <!-- Hero image -->
-         <div class="hero-image">
+         <div class="hero-image" alt="Image of the Tocumwal houses from the main archive" Title="Welcome">
             <div id="welcome-wrapper">
                <h1 class="parallax-header">Welcome</h1>
             </div>
@@ -75,18 +75,18 @@
          </div>
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
-         <div class="parallax-image2">
+         <div class="parallax-image2" alt="Picture of a house from the Tocumwal archive" title="Tocumwal Stories">
             <div id="stories-wrapper" class="stories-background">
                <h1 class="parallax-header">Tocumwal Stories</h1>
             </div>
          </div>
          <!-- Middle content -->
          <div class="flex-item">
-            <!-- Right top -->
+            <!-- Right top content -->
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img class="middle-image1">
+                     <img src="assets/images/contenttree.jpg" class="middle-image1" title="test" alt="Archive image of soldiers resting in barracks">
                   </div>
                   <div class="block-content">
                      <h3 class="story-heading">Dr Darryl McIntyre and Noel Flanagan</h3>
@@ -96,7 +96,7 @@
                   </div>
                </div>
             </div>
-            <!-- left top -->
+            <!-- Left top content -->
             <div>
                <div class="block">
                   <div class="block-image">
@@ -141,6 +141,7 @@
                </div>
             </div>
          </div>
+         <!-- End of middle content -->
          <!-- Contact From -->
          <div class="contact-background">
             <header>
@@ -198,13 +199,15 @@
                </div>
             </section>
          </div>
+          <!-- End of contact From -->
       </main>
+      <!-- Footer -->
       <div class="footer-background">
          <footer>
             <!-- Anchor tag used as the back to top button -->
-            <div> <a href="#Home" class="topbtn">Back to top</a> </div>
+            <div> <a href="#Home" class="topbtn" title="Back to top button">Back to top</a> </div>
             <p> &#169; 0074 Tocumwal Houses Archive </p>
-            <p>Contact Us:<a class="footerclicked" href="#">Tocumwal Houses</a></p>
+            <p>Contact Us:<a class="footerclicked" href="#" title="Tocumwal Houses main website link">Tocumwal Houses</a></p>
             <p>Email:<a class="footerclicked" href="#">Library.customerinfo@act.gov.au</a></p>
             <p><a class="footerclicked" href="#">About Us</a></p>
             <p><a class="footerclicked" href="#">FAQ</a></p>
