Minor design changes etc.

--- a/website/index.html
+++ b/website/index.html
@@ -12,11 +12,11 @@
       <meta name="viewport" content="width=device-width">
       <link rel="icon" type="image/png" href="assets/images/icon.png">
    </head>
-  <a href="#ContentStart" class="skipbtn">Skip to content (Press Enter) </a>
+   <a href="#ContentStart" class="skipbtn">Skip to content (Press Enter) </a>
    <body>
       <header class="container" id="Home">
          <div>
-               <h1 class="title">Tocumwal Houses Archive</h1>
+            <h1 class="title">Tocumwal Houses Archive</h1>
          </div>
          <nav class="navbar">
             <ul>
@@ -27,8 +27,9 @@
          </nav>
       </header>
       <main>
-         <!-- Hero image -->
+         <!-- Hero image --><!-- test -->
          <div class="hero-image" alt="Image of the Tocumwal houses from the main archive." Title="Welcome">
+            
             <div id="welcome-wrapper">
                <h1 class="parallax-header">Welcome</h1>
             </div>
@@ -202,7 +203,7 @@
                </div>
             </section>
          </div>
-          <!-- End of contact From -->
+         <!-- End of contact From -->
       </main>
       <!-- Footer -->
       <div class="footer-background">
