--- a/website/index.html
+++ b/website/index.html
@@ -20,16 +20,15 @@
          </div>
          <nav class="navbar">
             <ul>
-               <li><a href="#Home">Home</a></li>
+               <li><a href="#Home" class="nav-links">Home</a></li>
                <li><a href="#Stories">Tocumwal Stories</a></li>
                <li><a href="#Contact">Contact Us</a></li>
             </ul>
          </nav>
       </header>
       <main>
-         <!-- Hero image --><!-- test -->
-         <div class="hero-image" alt="Image of the Tocumwal houses from the main archive." Title="Welcome">
-            
+         <!-- Hero image -->
+         <div class="hero-image" alt="" Title="Welcome">
             <div id="welcome-wrapper">
                <h1 class="parallax-header">Welcome</h1>
             </div>
@@ -75,7 +74,7 @@
          </div>
          <!-- End of into content -->
          <!-- Second parallax scrolling image -->
-         <div id="Stories" class="parallax-image2" alt="Picture of a house from the Tocumwal archive" title="Tocumwal Stories">
+         <div id="Stories" class="parallax-image2" alt="" title="Tocumwal Stories">
             <div id="stories-wrapper" class="stories-background">
                <h1 class="parallax-header">Tocumwal Stories</h1>
             </div>
