--- a/website/index.html
+++ b/website/index.html
@@ -129,7 +129,7 @@
             <div>
                <div class="block">
                   <div class="block-image">
-                     <img src="assets/images/contentone.jpg" class="middle-image4" title="The Andrew Morris story" alt="Black and white photo of a house from the Tocumwal archive.">
+                     <img src="assets/images/contentone.jpg" class="middle-image4" title="The Andrew Morris story" alt="Black and white photo of houses from the Tocumwal archive.">
                   </div>
                   <div class="block-content">
                      <h3 class="story-heading">Andrew Morris</h3>
@@ -150,7 +150,8 @@
                <div class="contact-wrap">
                   <article>
                      <!-- On click, the submit button will take users to the top of the page -->
-                     <form>
+                     <form action="#Home">
+                        <!--<div class="required">This field is required.*</div> test -->
                         <div class="form-spacing">
                            <input
                               name="contact_name"
@@ -161,6 +162,7 @@
                               title="Contact name field"
                               />
                         </div>
+                        <!--<div class="required">This field is required.*</div> test -->
                         <div class="form-spacing">
                            <input
                               name="contact_email"
@@ -189,7 +191,8 @@
                               maxlength="500"
                               placeholder="Your questions* (500 character limit)"
                               required
-                              title="Text field to add your questions"
+                              aria-labelledby="textarea"
+                              title="Text field to add your questions (500 character limit)"
                               ></textarea>
                         </div>
                         <div>
@@ -210,10 +213,10 @@
             <!-- Anchor tag used as the back to top button -->
             <div> <a href="#Home" class="topbtn" title="Back to top button">Back to top</a> </div>
             <p> &#169; 0074 Tocumwal Houses Archive </p>
-            <p>Find Us:<a class="footerclicked" href="#" title="Tocumwal Houses main website link">Tocumwal Houses</a></p>
-            <p>Email:<a class="footerclicked" href="#" title="Email the library.act.gov.au inbox">Library.customerinfo@act.gov.au</a></p>
-            <p><a class="footerclicked" href="#" title="Libraries ACT about us webpage">About Us</a></p>
-            <p><a class="footerclicked" href="#" title="Libraries ACT frequently asked questions webpage">FAQ</a></p>
+            <p>Find Us:<a class="footerclicked" href="#Home" title="Tocumwal Houses main website link">Tocumwal Houses</a></p>
+            <p>Email:<a class="footerclicked" href="#Home" title="Email the library.act.gov.au inbox">Library.customerinfo@act.gov.au</a></p>
+            <p><a class="footerclicked" href="#Home" title="Libraries ACT about us webpage">About Us</a></p>
+            <p><a class="footerclicked" href="#Home" title="Libraries ACT frequently asked questions webpage">FAQ</a></p>
          </footer>
       </div>
    </body>
